syntax = "proto3";

package poll;

import "shared.proto";

option java_multiple_files = true;
option java_package = "com.pollvite.grpc.poll";
option java_outer_classname = "PollProto";

service PollChanService {
  rpc getPollChanById (shared.IdPb) returns (PollChanReadPb) {}
  rpc createPollChan (PollChanCreatePb) returns (PollChanReadPb) {}
  rpc editPollChan (PollChanEditPb) returns (PollChanReadPb) {}
  rpc deletePollChan (shared.IdPb) returns (PollChanReadPb) {}
}

message PollChanCorePb {
  string owner = 1;
  string title = 2;
  string description = 3;
}

message PollChanCreatePb {
  PollChanCorePb core = 1;
}

message PollChanEditPb {
  shared.IdPb id = 1;
  PollChanCorePb core = 2;
}

message PollChanReadPb {
  shared.IdPb id = 1;
  PollChanCorePb core = 2;
}