syntax = "proto3";

package shared;

option java_multiple_files = true;
option java_package = "com.pollvite.grpc.shared";
option java_outer_classname = "SharedProto";

message IdPb {
  string value = 1;
}

message TimestampsPb {
  int64 createdAt = 1;
  int64 updatedAt = 2;
}

message AuditPb {
  string createdBy = 1;
  string updatedBy = 2;
}

message PageRequestPb {
 int32 page = 1;
 int32 size = 2;
}